syntax = "proto3";

package report.service.v1;

import "gnostic/openapi/v3/annotations.proto";
import "google/protobuf/empty.proto";

import "pagination/v1/pagination.proto";

enum ReportType {
  ReportTypeUnknown = 0;

  ReportTypeUser = 1;
  ReportTypeEvent = 2;
}

message UserReport {
  string appId = 1;
  string distinctId = 2;
  string tableId = 3;
  string ip = 4;
  int32 reportType = 5;
  string debug = 6;
  bytes requestData = 7;
  string reportTime = 8;
  string consumptionTime = 9;
  string eventName = 10;
  int64 offset = 11;
}

message EventReport {
  string accountId = 1;
  string distinctId = 2;
  string userId = 3;

  string partEvent = 4;
  string partDate = 5;
  string mpPlatform = 6;
  string libVersion = 7;

  string os = 8;
  string osVersion = 20;

  string screenWidth = 9;// 屏幕宽
  string screenHeight = 11;// 屏幕高

  string deviceId = 12;
  string networkType = 13;
  string deviceModel = 14;

  string countryCode = 10; // 国家
  string province = 16;// 省
  string city = 15;// 城市

  string lib = 17;
  string scene = 18;
  string manufacturer = 19;
  string ip = 22;
  string tableId = 23;
  map<string, string> properties = 24;
}

message AcceptStatusReportData {
  optional string dataName = 1;

  optional string reportType = 2;
  optional string reportData = 3;

  optional string errorReason = 4;
  optional string errorHandling = 5;

  optional int32 status = 6;

  optional string partEvent = 7;
  optional string partDate = 8;
}

message RealTimeWarehousingData {
  optional string eventName = 1 [json_name = "event_name"];
  optional string reportData = 2 [json_name = "report_data"];
  optional string createTime = 3 [json_name = "create_time"];
}

message KafkaData {
  optional int64 appId = 1;
  optional int64 distinctId = 2;
  optional int64 tableId = 3;
  optional string ip = 4;
  optional int32 reportType = 5;
  optional string debug = 6;
  optional string reqData = 7;
  optional string reportTime = 8;
  optional string consumptionTime = 9;
  optional string eventName = 10;
}
